--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-force-graph-2d": "^1.29.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
